feat : finish order endpoint
