# src/routes/route.order.js
@@ -2,10 +2,9 @@ const express = require('express');
 const orderRouter = express.Router();
 const orderController = require('../controllers/controller.order');
 
-// orderRouter.get('/orders', orderController.getOrders);
-// orderRouter.get('/orders/:orderId', orderController.getOrderById);
+orderRouter.get('/orders/user/:userId', orderController.getOrderByUserId);
+orderRouter.get('/orders/:orderId', orderController.getById);
 orderRouter.post('/orders', orderController.createOrder);
-// orderRouter.put('/orders/:orderId', orderController.updateOrder);
-// orderRouter.delete('/orders/:orderId', orderController.deleteOrder);
+orderRouter.put('/orders/status/:orderId', orderController.updateStatus);
 
 module.exports = orderRouter;
